fixing alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
 
 body {
   @apply bg-[#fff];
+  font-family: "Outfit", serif !important;
 }
 
 .red-text {
